--- a/Daisy portfolio/index.html
+++ b/Daisy portfolio/index.html
@@ -50,7 +50,7 @@
 <!-- home section starts  -->
 <section class="home" id="home">
 <div class="profile">
-    <img src="dicey.png" alt="profile-picture" class="profile-picture">
+    <img src="images/dicey.png" alt="profile-picture" class="profile-picture">
     <h1 class="profile-name">Daisy</h1>
     <a href="work-with-me-button" class="btn">WorkWithMe</a>
     <a href="Follow-me-button" class="btn">FollowMe</a>
@@ -71,8 +71,8 @@
     
 </div>
 <div>
-    <img src="kitio.jpg" class= "girl">
-    <img src="cat.png" class= "pet">
+    <img src="images/kitio.jpg" class= "girl">
+    <img src="images/cat.png" class= "pet">
 </div>
 </section>
 
@@ -384,7 +384,7 @@
         </video>
 
         <a href="#" class="box">
-            <img src="portifolio.PNG" alt="">
+            <img src="images/portifolio.PNG" alt="">
             <div class="info">personal portifolio</div>
         </a>
         <video width="640" height="350" controls>
@@ -536,7 +536,7 @@
         
     </form>
         <div class="image">
-            <img src="dicey.jpg" width="300" height="400"    alt="">
+            <img src="images/dicey.jpg" width="300" height="400"    alt="">
         </div>
 
     </div>
